[backend] implement batch validationi request API
